# vyra_module_template_python

./: .env.example  copier.yml
{{ module_name }}/: .gitignore  Dockerfile  pyproject.toml  ruff.toml  vyra_entrypoint.sh
{{ module_name }}/.github/workflows/: ci.yml
{{ module_name }}/.module/: README.md  module_params.yaml
{{ module_name }}/config/: backend_webserver.json  nginx.conf  storage_config.ini
{{ module_name }}/docs/api/: BACKEND_API.md  FEATURE_MODULE_FEED_AND_UPDATES.md
{{ module_name }}/docs/architecture/: BACKEND_WEBSERVER_ARCHITECTURE.md
{{ module_name }}/frontend/: index.html  vite.config.ts
{{ module_name }}/frontend/src/api/: settings.api.ts
{{ module_name }}/frontend/src/assets/: styles.css
{{ module_name }}/frontend/src/components/layout/: SideDockPopup.vue
{{ module_name }}/frontend/src/composables/: usePluginIcon.ts
{{ module_name }}/frontend/src/features/settings/pages/: AboutPage.vue  (+1 more)
{{ module_name }}/frontend/src/router/: index.ts
{{ module_name }}/frontend/src/store/: sidebar.ts
{{ module_name }}/src/{{ module_name }}/alembic/: env.py
{{ module_name }}/src/{{ module_name }}/resource/: module_config.yaml.DEPRECATED
{{ module_name }}/src/{{ module_name }}/{{ module_name }}/: _base_.py  container_injection.py  interface.py  logging_config.py  main.py  taskmanager.py
{{ module_name }}/src/{{ module_name }}/{{ module_name }}/application/: application.py
{{ module_name }}/src/{{ module_name }}/{{ module_name }}/backend_webserver/: __init__.py  asgi.py  main_rest.py
{{ module_name }}/src/{{ module_name }}/{{ module_name }}/plugin/: gateway_wasm_runtime.py  plugin_gateway.py
{{ module_name }}/src/{{ module_name }}/{{ module_name }}/state/: __init__.py  state_manager.py
{{ module_name }}/src/{{ module_name }}_interfaces/config/: {{ module_name }}_state.meta.json
{{ module_name }}/tests/: conftest.py
{{ module_name }}/tests/unit/: test_plugin_models.py
{{ module_name }}/tools/: README.md  generate_grpc_protos.py  hot_reload.py  post_copier_setup.sh  setup_interfaces.py  setup_interfaces.sh  start_hot_reload.py  start_hot_reload.sh  startup_core.sh  startup_ros2_core.sh  update_manifest.py
{{ module_name }}/wheels/: vyra_base-0.1.8+build.155-py3-none-any.whl  vyra_base-0.1.8+build.157-py3-none-any.whl  vyra_base-0.1.8+build.163-py3-none-any.whl
(+21 files in other folders)
