
[tool.vyra]
module_name = "{{ module_name }}"
module_blueprints = "basic"
module_description = "This template could be used to create a vyra module with basic functionality."
module_links = [
    { name = "Vyra-Documentation", url = "https://vyra-entity.github.io/vyra_base_python/" }
]

[tool.poetry]
name = "{{ module_name }}"
version = "0.1.0"
description = "VYRA Module Template - Supports both ROS2 and SLIM (Zenoh-based) modes"
authors = ["{{ author_name }} <{{ author_email }}>"]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.10, <4"
packages = [
    { include = "{{ module_name }}", from = "src/{{ module_name }}" }
]

[tool.poetry.scripts]
# Entry points for both modes
{{ module_name | replace("_", "-") }} = "{{ module_name }}.main:main"
{{ module_name | replace("_", "-") }}-slim = "{{ module_name }}.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<4"
setuptools = ">=65.5.1"

# Core dependencies (both modes)
python-json-logger = "^2.0.7"
colorlog = "^6.8.0"
psutil = "^5.9.0"
pydantic = "^2.5.0"
pyyaml = "^6.0"

# Database migrations
alembic = "^1.13.0"
bcrypt = "^4.0.0"

# Web backend (both modes)
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
aiohttp = "^3.9.0"
flask = "^3.0.0"
gunicorn = "^23.0.0"

# SLIM mode: Zenoh communication (optional, installed when VYRA_SLIM=true)
eclipse-zenoh = {version = "^0.11.0", optional = true}
zenoh-python = {version = "^0.11.0", optional = true}

# ROS2 mode: ROS2 dependencies (optional, installed when VYRA_SLIM=false)
# Note: ROS2 packages typically installed via apt, not pip

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"

# Code quality
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
isort = "^5.13.0"

# Security scanning
bandit = {extras = ["toml"], version = "^1.7.0"}
pip-audit = "^2.7.0"

# Development tools
ipython = "^8.20.0"
ipdb = "^0.13.13"

[tool.poetry.extras]
slim = ["eclipse-zenoh", "zenoh-python"]
all = ["eclipse-zenoh", "zenoh-python"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
